--- a/src/styles/mangaFlipCard.css
+++ b/src/styles/mangaFlipCard.css
@@ -32,6 +32,8 @@
   height: 100%;
 
   transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+
   transition: transform .6s cubic-bezier(.2,.8,.2,1);
   will-change: transform;
 
@@ -80,6 +82,10 @@
   height: 90%;
   margin: auto;
   border-radius: 12px;
+
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  transform: translateZ(0);
 
   box-shadow:
     0 10px 25px rgba(0,0,0,.6),
